using Sirenix.OdinInspector;
using UnityEngine;

[CreateAssetMenu(fileName = "appliance", menuName = "Data/Crafting/Appliance")]
public class Appliance : ScriptableObject {
	[PreviewField] public Sprite sprite;
} 