using System.Collections.Generic;

public class CraftingTable {

	// TODO: create implementation
	
	#region Fields

	public List<Item>[,] table;

	#endregion

	#region Methods

	
	
	#endregion

}