using UnityEngine;

public class Interactable : MonoBehaviour {

	#region Fields

	// Static

	// Public
	public Interaction[] interactions;
	
	// Hidden Public

	// Private

	// Properties

	// Components

	// Events

	#endregion

	#region Unity Messages

	private void Start() { }

	private void Update() { }

	#endregion

	#region Methods

	#endregion

}