using System;

[Serializable]
public class Set {
	public Item item;
	public int quantity;
}