using UnityEngine;
using UnityEngine.UI;

public class UISlot : MonoBehaviour {
	// Public
	public Image item;
	public Text quantity;
}